maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:2: error: Unmatched closing brace '}' ignored here
  while (!isOverBaggle) {while (!isFacingWall()) {forward(); right()}; left()}; pickupBaggle()} 
                                                                                              ^